<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup xmlns:camera="http://schemas.android.com/apk/res/com.mediatek.camera" camera:title="@string/pref_camera_settings_category">
    <IconListPreference
        camera:title="@string/pref_camera_flashmode_title"
        camera:key="pref_camera_flashmode_key"
        camera:defaultValue="@string/pref_camera_flashmode_default"
        camera:entryValues="@array/pref_camera_flashmode_entryvalues"
        camera:entries="@array/pref_camera_flashmode_entries"
        camera:icons="@array/camera_flashmode_icons"/>
    <IconListPreference
        camera:title="@string/pref_exposure_title"
        camera:key="pref_camera_exposure_key"
        camera:defaultValue="@string/pref_camera_exposure_default"
        camera:entryValues="@array/pref_camera_exposure_entryvalues"
        camera:entries="@array/pref_camera_exposure_entries"
        camera:icons="@array/camera_exposure_icons"/>
    <IconListPreference
        camera:title="@string/pref_camera_scenemode_title"
        camera:key="pref_camera_scenemode_key"
        camera:defaultValue="@string/pref_camera_scenemode_default"
        camera:entryValues="@array/pref_camera_scenemode_entryvalues"
        camera:entries="@array/pref_camera_scenemode_entries"
        camera:icons="@array/camera_scenemode_icons"/>
    <IconListPreference
        camera:title="@string/pref_camera_whitebalance_title"
        camera:key="pref_camera_whitebalance_key"
        camera:defaultValue="@string/pref_camera_whitebalance_default"
        camera:entryValues="@array/pref_camera_whitebalance_entryvalues"
        camera:entries="@array/pref_camera_whitebalance_entries"
        camera:icons="@array/whitebalance_icons"/>
    <RecordLocationPreference
        camera:title="@string/pref_camera_record_location_title"
        camera:key="pref_camera_recordlocation_key"
        camera:defaultValue="@string/pref_camera_recordlocation_default"
        camera:entryValues="@array/pref_camera_recordlocation_entryvalues"
        camera:entries="@array/pref_camera_recordlocation_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_picturesize_title"
        camera:key="pref_camera_picturesize_key"/>
    <IconListPreference
        camera:title="@string/pref_camera_id_title"
        camera:key="pref_camera_id_key"
        camera:defaultValue="@string/pref_camera_id_default"
        camera:entries="@array/camera_id_entries"
        camera:icons="@array/camera_id_icons"/>
    <ListPreference
        camera:title="@string/pref_camera_iso_title"
        camera:key="pref_camera_iso_key"
        camera:defaultValue="@string/pref_camera_iso_default"
        camera:entryValues="@array/pref_camera_iso_entryvalues"
        camera:entries="@array/pref_camera_iso_entries"/>
    <IconListPreference
        camera:title="@string/pref_camera_ais_title"
        camera:key="perf_camera_ais_key"
        camera:defaultValue="@string/pref_camera_ais_default"
        camera:entryValues="@array/pref_camera_ais_entryvalues"
        camera:entries="@array/pref_camera_ais_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_edge_title"
        camera:key="pref_camera_edge_key"
        camera:defaultValue="@string/pref_camera_edge_default"
        camera:entryValues="@array/pref_camera_dip_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_hue_title"
        camera:key="pref_camera_hue_key"
        camera:defaultValue="@string/pref_camera_hue_default"
        camera:entryValues="@array/pref_camera_dip_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_saturation_title"
        camera:key="pref_camera_saturation_key"
        camera:defaultValue="@string/pref_camera_saturation_default"
        camera:entryValues="@array/pref_camera_dip_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_brightness_title"
        camera:key="pref_camera_brightness_key"
        camera:defaultValue="@string/pref_camera_brightness_default"
        camera:entryValues="@array/pref_camera_dip_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_contrast_title"
        camera:key="pref_camera_contrast_key"
        camera:defaultValue="@string/pref_camera_contrast_default"
        camera:entryValues="@array/pref_camera_dip_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"/>
    <IconListPreference
        camera:title="@string/pref_camera_coloreffect_title"
        camera:key="pref_camera_coloreffect_key"
        camera:defaultValue="@string/pref_camera_coloreffect_default"
        camera:entryValues="@array/pref_camera_coloreffect_entryvalues"
        camera:entries="@array/pref_camera_coloreffect_entries"
        camera:icons="@array/camera_coloreffect_icons"/>
    <IconListPreference
        camera:title="@string/pref_camera_selftimer_title"
        camera:key="pref_camera_self_timer_key"
        camera:defaultValue="@string/pref_camera_selftimer_default"
        camera:entryValues="@array/pref_camera_selftimer_entryvalues"
        camera:entries="@array/pref_camera_selftimer_entries"
        camera:icons="@array/camera_selftimer_icons"/>
    <ListPreference
        camera:title="@string/pref_camera_antibanding_title"
        camera:key="pref_camera_antibanding_key"
        camera:defaultValue="@array/pref_camera_antibanding_default_array"
        camera:entryValues="@array/pref_camera_antibanding_entryvalues"
        camera:entries="@array/pref_camera_antibanding_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_zsd_title"
        camera:key="pref_camera_zsd_key"
        camera:defaultValue="@string/pref_camera_zsd_default"
        camera:entryValues="@array/pref_camera_zsd_entryvalues"
        camera:entries="@array/pref_camera_zsd_entries"/>
    <ListPreference
        camera:title="@string/pref_video_stabilization_title"
        camera:key="pref_video_stabilization_key"
        camera:defaultValue="@string/pref_video_stabilization_default"
        camera:entryValues="@array/pref_video_stabilization_entryvalues"
        camera:entries="@array/pref_video_stabilization_entries"/>
    <IconListPreference
        camera:title="@string/shutter_type_live_focus"
        camera:key="pref_live_focus_key"
        camera:defaultValue="@string/pref_live_photo_default"
        camera:entryValues="@array/pref_live_photo_entryvalues"
        camera:entries="@array/pref_live_photo_entries"
        camera:icons="@array/tw_pref_live_focus_icons"/>
    <ListPreference
        camera:title="@string/pref_camera_continuous_number_title"
        camera:key="pref_camera_shot_number"
        camera:defaultValue="@string/pref_camera_continuous_number_default"
        camera:entryValues="@array/pref_camera_continuous_number_entryvalues"
        camera:entries="@array/pref_camera_continuous_number_entries"/>
    <IconListPreference
        camera:title="@string/pref_video_quality_title"
        camera:key="pref_video_quality_key"
        camera:entryValues="@array/pref_video_quality_entryvalues"
        camera:entries="@array/pref_video_quality_entries"/>
    <IconListPreference
        camera:title="@string/pref_slow_motion_video_quality_title"
        camera:key="pref_slow_motion_video_quality_key"
        camera:entryValues="@array/pref_slow_motion_video_quality_entryvalues"
        camera:entries="@array/pref_slow_motion_video_quality_entries"/>
    <IconListPreference
        camera:title="@string/pref_refocus_video_quality_title"
        camera:key="pref_refocus_video_quality_key"
        camera:defaultValue="@string/pref_refocus_video_quality_default"
        camera:entryValues="@array/pref_refocus_video_quality_entryvalues"
        camera:entries="@array/pref_refocus_video_quality_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_recordaudio_title"
        camera:key="pref_camera_recordaudio_key"
        camera:defaultValue="@string/pref_camera_recordaudio_default"
        camera:entryValues="@array/pref_camera_recordaudio_entryvalues"
        camera:entries="@array/pref_camera_recordaudio_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_video_hd_recording_title"
        camera:key="pref_camera_video_hd_recording_key"
        camera:defaultValue="@string/pref_video_hd_recording_default"
        camera:entryValues="@array/pref_camera_video_hd_recording_entryvalues"
        camera:entries="@array/pref_camera_video_hd_recording_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_image_properties_title"
        camera:key="pref_camera_image_properties_key"
        camera:defaultValue="@string/pref_camera_image_properties_default"
        camera:entryValues="@array/pref_camera_image_properties_entryvalues"
        camera:entries="@array/pref_camera_image_properties_entries"/>
    <ListPreference
        camera:title="@string/pref_dual_camera_switch"
        camera:key="pref_dual_camera_key"
        camera:defaultValue="@string/pref_dual_camera_default"
        camera:entryValues="@array/pref_dual_camera_entryvalues"
        camera:entries="@array/pref_dual_camera_entries"/>
    <ListPreference
        camera:title="@string/pref_fast_af_title"
        camera:key="pref_fast_af_key"
        camera:defaultValue="@string/pref_fast_af_default"
        camera:entryValues="@array/pref_dual_camera_dip_entryvalues"
        camera:entries="@array/pref_dual_camera_dip_entries"/>
    <ListPreference
        camera:title="@string/pref_distance_info_title"
        camera:key="pref_distance_key"
        camera:defaultValue="@string/pref_distance_default"
        camera:entryValues="@array/pref_dual_camera_dip_entryvalues"
        camera:entries="@array/pref_dual_camera_dip_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_picturesize_ratio_title"
        camera:key="pref_camera_picturesize_ratio_key"
        camera:entryValues="@array/pref_camera_picturesize_ratio_entryvalues"
        camera:entries="@array/pref_camera_picturesize_ratio_entries"/>
    <IconListPreference
        camera:title="@string/pref_voice_capture"
        camera:key="pref_voice_key"
        camera:defaultValue="@string/pref_voice_default"
        camera:entryValues="@array/pref_voice_entryvalues"
        camera:entries="@array/pref_voice_entries"/>
    <IconListPreference
        camera:title="@string/pref_slow_motion_title"
        camera:key="pref_slow_motion_key"
        camera:defaultValue="@string/pref_slow_motion_default"
        camera:entryValues="@array/pref_slow_motion_entryvalues"
        camera:entries="@array/pref_slow_motion_entries"
        camera:icons="@array/slow_motion_icons"/>
    <ListPreference
        camera:title="@string/pref_camera_facebeauty_properties_title"
        camera:key="pref_camera_facebeauty_properties_key"
        camera:defaultValue="@string/pref_camera_facebeauty_properties_default"
        camera:entryValues="@array/pref_camera_facebeauty_properties_entryvalues"
        camera:entries="@array/pref_camera_facebeauty_properties_entries"/>
    <IconListPreference
        camera:title="@string/pref_facebeauty_smooth_title"
        camera:key="pref_facebeauty_smooth_key"
        camera:defaultValue="@string/pref_facebeauty_smooth_default"
        camera:entryValues="@array/pref_camera_facebeauty_turning_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"
        camera:icons="@array/facebeauty_smooth_icons"/>
    <IconListPreference
        camera:title="@string/pref_facebeauty_skin_color_title"
        camera:key="pref_facebeauty_skin_color_key"
        camera:defaultValue="@string/pref_facebeauty_skin_color_default"
        camera:entryValues="@array/pref_camera_facebeauty_turning_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"
        camera:icons="@array/facebeauty_skin_color_icons"/>
    <IconListPreference
        camera:title="@string/pref_facebeauty_sharp_title"
        camera:key="pref_facebeauty_sharp_key"
        camera:defaultValue="@string/pref_facebeauty_sharp_default"
        camera:entryValues="@array/pref_camera_facebeauty_turning_entryvalues"
        camera:entries="@array/pref_camera_dip_entries"
        camera:icons="@array/facebeauty_sharp_icons"/>
    <ListPreference
        camera:title="@string/pref_camera_eis_title"
        camera:key="pref_video_eis_key"
        camera:defaultValue="@string/pref_camera_eis_default"
        camera:entryValues="@array/pref_camera_eis_entryvalues"
        camera:entries="@array/pref_camera_eis_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_3dnr_title"
        camera:key="pref_video_3dnr_key"
        camera:defaultValue="@string/pref_camera_3dnr_default"
        camera:entryValues="@array/pref_camera_3dnr_entryvalues"
        camera:entries="@array/pref_camera_3dnr_entries"/>
    <ListPreference
        camera:title="@string/pref_camera_face_detect_title"
        camera:key="pref_face_detect_key"
        camera:defaultValue="@string/pref_camera_face_detect_default"
        camera:entryValues="@array/pref_camera_face_detect_entryvalues"
        camera:entries="@array/pref_camera_face_detect_entries"/>
    <ListPreference
        camera:title="@string/pref_face_beauty_mode_title"
        camera:key="pref_face_beauty_multi_mode_key"
        camera:entryValues="@array/pref_camera_multi_face_beauty_entryvalues"
        camera:entries="@array/pref_camera_multi_face_beauty_entries"/>
    <ListPreference
        camera:title="@string/pref_af_mode_title"
        camera:key="pref_af_mode_key"
        camera:defaultValue="@string/pref_af_mode_default"
        camera:entryValues="@array/pref_af_entryvalues"
        camera:entries="@array/pref_af_entries"/>
    <IconListPreference
        camera:title="@string/pref_camera_hdr_title"
        camera:key="pref_hdr_key"
        camera:defaultValue="@string/pref_camera_hdr_default"
        camera:entryValues="@array/pref_camera_hdr_entryvalues"
        camera:entries="@array/pref_camera_hdr_entries"
        camera:icons="@array/tw_pref_hdr_icons"/>
    <ListPreference
        camera:title="@string/pref_asd_title"
        camera:key="pref_asd_key"
        camera:defaultValue="@string/pref_asd_default"
        camera:entryValues="@array/pref_asd_entryvalues"
        camera:entries="@array/pref_asd_entries"/>
    <IconListPreference
        camera:title="@string/pref_dng_title"
        camera:key="pref_dng_key"
        camera:defaultValue="@string/pref_dng_default"
        camera:entryValues="@array/pref_dng_entryvalues"
        camera:entries="@array/pref_dng_entries"
        camera:icons="@array/dng_icons"/>
</PreferenceGroup>
