<?xml version="1.0" encoding="utf-8"?>
<com.android.camera.p001ui.ModePickerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tw_android="http://schemas.android.com/apk/res/com.mediatek.camera" style="@style/twModePickerLayout">
    <com.android.camera.p001ui.ModePickerScrollView
        android:id="@+id/mode_picker_scroller"
        style="@style/twModePickerScroll">
        <LinearLayout
            android:id="@+id/mode_picker"
            android:splitMotionEvents="false"
            style="@style/twModePickerGroup">
            <com.android.camera.p001ui.RotateImageView
                android:id="@+id/mode_photo"
                android:contentDescription="@string/accessibility_switch_to_camera"
                style="@style/twModePickerIcon"/>
            <com.android.camera.p001ui.RotateImageView
                android:id="@+id/mode_stereo_camera"
                android:contentDescription="@string/accessibility_switch_to_dual_camera"
                style="@style/twModePickerIcon"/>
            <com.android.camera.p001ui.RotateImageView
                android:id="@+id/mode_photo_pip"
                android:contentDescription="@string/accessibility_switch_to_pip"
                style="@style/twModePickerIcon"/>
            <com.android.camera.p001ui.RotateImageView
                android:id="@+id/mode_face_beauty"
                android:contentDescription="@string/accessibility_switch_to_face_beauty"
                style="@style/twModePickerIcon"/>
            <com.android.camera.p001ui.RotateImageView
                android:id="@+id/mode_panorama"
                android:contentDescription="@string/accessibility_switch_to_panorama"
                style="@style/twModePickerIcon"/>
        </LinearLayout>
    </com.android.camera.p001ui.ModePickerScrollView>
</com.android.camera.p001ui.ModePickerFrameLayout>
